# processmap

./: .gitignore  LICENSE.txt  Makefile  pyproject.toml  readme.md
src/processmap/: __init__.py  common.py  either.py  errors.py  graph.py  helpers.py  process.py  process_graph.py  process_map.py  result.py
tests/: common.py  test_common.py  test_process.py
tests/processmap/: process_graph_equal.py  test_either.py  test_helpers.py  test_process_map.py  test_processmap.py
